# diffing

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  STARTUP_DISPLAY_PLAN.md  index.html  package.json  pnpm-lock.yaml  skills-lock.json  skills.sh  tsconfig.json  tsdown.config.ts  vite.config.ts  vitest.config.ts
.changeset/: add-gh-pr-review-mode.md  add-tui-terminal-ui.md  async-handoff-park.md  browse-plan-versions.md  diffing-show-subcommand.md  file-card-copy-path.md  github-pr-review-parity.md  interactive-session-conflict.md  load-selected-fonts-as-webfonts.md  native-agent-workflows.md  olive-hoops-trade.md  tidy-show-range-overview.md
.claude/: launch.json
.claude/skills/: diffing-finish-review  diffing-plan-review  diffing-review  diffing-start-review
.diffit/: comments.json
.github/workflows/: release.yml
crates/diffing-core/: Cargo.toml
crates/diffing-core/benches/: diff_index.rs
crates/diffing-core/src/: comments.rs  diff.rs  index.rs  lib.rs  storage.rs
crates/diffing-tui/: Cargo.toml
crates/diffing-tui/src/: agent_api.rs  app.rs  keys.rs  lsp.rs  main.rs  persistence.rs  server_lock.rs  themes.rs  tui.rs
crates/diffing-tui/src/diff/: highlight.rs
crates/diffing-tui/src/handoff/: format.rs  mod.rs  review.rs
crates/diffing-tui/src/ui/: agent_activity_toast.rs  comment_form.rs  comment_thread.rs  comment_tracker.rs  file_diff_card.rs  file_tree.rs  file_tree_render.rs  gridline.rs  mod.rs  send_review_popover.rs  settings_sheet.rs  vim_status_bar.rs
docs/: cli.md
landing/: BUILD-SPEC.md  README.md  index.html  main.js  styles.css
skills/diffing/: SKILL.md
skills/diffing-finish-review/: SKILL.md
skills/diffing-plan-review/: SKILL.md
skills/diffing-pr-address/: SKILL.md
skills/diffing-pr-read/: SKILL.md
skills/diffing-review/: SKILL.md
skills/diffing-start-review/: SKILL.md
skills/diffit-finish-review/: SKILL.md
skills/diffit-review/: SKILL.md
skills/diffit-start-review/: SKILL.md
src/: cli-agent.ts  cli-gh.ts  cli.ts  comments.ts  git.ts  mcp.ts  server.ts  settings.ts  types.ts
src/__tests__/: apply-suggestion.test.ts  cli-show.test.ts  comment-format.test.ts  comment-outdated.test.ts  comments.test.ts  completions.test.ts  diff-fingerprint.test.ts  diff-options.test.ts  editor-launcher.test.ts  find-tui-binary.test.ts  gh-pr.test.ts  git-show-parse.test.ts  git.test.ts  github-attachments.test.ts  github-auth.test.ts  github-submit.test.ts  markdown.test.tsx  mcp.test.ts  path.test.ts  plan-endpoints.test.ts  plan-format.test.ts  plan-review-session.test.ts  plans-versions.test.ts  plans.test.ts  pr-file-level-comments.test.ts  review-export.test.ts  review-session.test.ts  search-endpoint.test.ts  secrets-scan.test.ts  server-lock.test.ts  server.test.ts  session-conflict.test.ts  settings.test.ts  (+3 more)
(+189 files in other folders)
