[workspace]
resolver = "2"
members = [
    "crates/diffing-core",
    "crates/diffing-tui",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.78"
license = "MIT"
publish = false

[workspace.dependencies]
ratatui            = "0.29"
crossterm          = "0.28"
tokio              = { version = "1", features = ["full"] }
clap               = { version = "4", features = ["derive", "env"] }
serde              = { version = "1", features = ["derive"] }
serde_json         = "1"
sha2               = "0.10"
directories        = "5"
anyhow             = "1"
thiserror          = "1"
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
syntect            = { version = "5" }
notify             = "6"
notify-debouncer-full = "0.3"
once_cell          = "1"
getrandom          = "0.2"

[profile.release]
opt-level = 3
lto       = "thin"
strip     = "symbols"
codegen-units = 1
