[package]
name        = "diffing-core"
version.workspace     = true
edition.workspace     = true
rust-version.workspace = true
license.workspace     = true
description = "Shared library for the diffing Rust tooling (TUI and beyond)."
publish     = false

[lib]
path = "src/lib.rs"

[dependencies]
serde       = { workspace = true }
serde_json  = { workspace = true }
sha2        = { workspace = true }
directories = { workspace = true }
anyhow      = { workspace = true }
thiserror   = { workspace = true }

[dev-dependencies]
tempfile = "3"
