[package]
name             = "diffing-tui"
version.workspace     = true
edition.workspace     = true
rust-version.workspace = true
license.workspace     = true
description      = "Terminal User Interface for diffing — opt-in via `diffing --tui`."
publish          = false

[[bin]]
name = "diffing-tui"
path = "src/main.rs"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dependencies]
diffing-core      = { path = "../diffing-core" }
ratatui           = { workspace = true }
crossterm         = { workspace = true }
tokio             = { workspace = true }
clap              = { workspace = true }
serde             = { workspace = true }
serde_json        = { workspace = true }
sha2              = { workspace = true }
directories       = { workspace = true }
anyhow            = { workspace = true }
thiserror         = { workspace = true }
tracing           = { workspace = true }
tracing-subscriber = { workspace = true }
syntect           = { workspace = true }
notify            = { workspace = true }
notify-debouncer-full = { workspace = true }
once_cell         = { workspace = true }
tui-textarea      = "0.7"

[dev-dependencies]
tempfile = "3"
